# HarmonyLiteOS-Demo

./: README.md
app/: BUILD.gn
app/Entry/: BUILD.gn  ModuleSelect.c
app/Entry/02/01_LED_Lights/: a02_01_LED_Lights.c
app/Entry/02/02_LED_Breathe/: a02_02_LED_Breathe.c
app/Entry/02/03_LED_Induction/: a02_03_LED_Induction.c
app/Entry/02/04_IC2/: a02_04_IC2.c
app/Entry/02/04_IC2/sensor/: E53_IA1.c
app/Entry/02/06_UART_Message/: a02_06_UART_Message.c
app/Entry/03/01_Kv_Store/: b03_01_Kv_Store.c
app/Entry/03/02_Utils_File/: b03_02_Utils_File.c
app/Entry/03/03_Wifi_Ap/: b03_03_Wifi_Ap.c
app/Entry/03/04_Wifi_Sta_Connect/: b03_04_Wifi_Sta_Connect.c
app/Entry/03/05_Tcp_Client/: b03_05_Tcp_Client.c  wifi_connect.c
app/Entry/05/01_Smart_Home/: c05_01_app_deal_command.c  c05_01_app_main.c  c05_01_app_report_message.c  c05_01_config_property.c
app/Entry/05/01_Smart_Home/nfc/: NT3H.c  NT3H.h
app/Entry/05/01_Smart_Home/profile_package/: profile_package.c  profile_package.h
app/Entry/05/01_Smart_Home/sensor/: E53_IA1.c
app/Entry/05/01_Smart_Home/wifi/: wifi_connect.c
smart_home/: build.gradle
smart_home/entry/: build.gradle
smart_home/entry/src/main/: config.json
smart_home/entry/src/main/java/com/wciot/shenghuo/: BasicSocket.java  MainAbility.java  MyApplication.java  ServiceAbility.java  SocketCallback.java  SocketClient.java
smart_home/entry/src/main/js/default/: extend.css
smart_home/entry/src/main/js/default/pages/index/: index.css  index.hml  index.js
smart_home/entry/src/main/resources/base/element/: string.json
smart_home/entry/src/ohosTest/resources/base/element/: string.json
smart_home/gradle/wrapper/: gradle-wrapper.properties
